# agentic-workflow-governance-platform

./: .env.example  AGENTS.md  CMakeLists.txt  PLAN.md  README.md  planner-cli  pr-failure-diagnostics.md  setup.sh
.github/: CODEOWNERS
.github/workflows/: ai-check.yml  ai-ci-check.yml  pr-governance-check.yml
agents/: planner_agent.cpp  planner_agent.h
cli/: cli_parser.cpp  cli_parser.h
config/: approval-config.json  dependency-rules.json  forbidden-paths.json  ownership-rules.json
docs/: architecture.md
git/: branch_manager.cpp  branch_manager.h  github_pr.cpp  github_pr.h
include/: approval_gate.hpp  audit_log.hpp  config_loader.hpp  dependency_validator.hpp  diff_scanner.hpp  github_metadata.hpp  ownership_validator.hpp  path_validator.hpp  trace_logger.hpp
llm/: github_models_client.cpp  github_models_client.h
models/: plan_response.h
output/: markdown_generator.cpp  markdown_generator.h
output/reports/: approval_20260526_045404.md  approval_20260526_045409.md  approval_20260526_050736.md  approval_20260526_063846.md  audit_20260526_040525.json  audit_20260526_040916.json  audit_20260526_040920.json  audit_20260526_043000.json  audit_20260526_043004.json  audit_20260526_043524.json  audit_20260526_044325.json  audit_20260526_045404.json  audit_20260526_045409.json  audit_20260526_050734.json  (+4 more)
repository/: cpp_scanner.cpp  cpp_scanner.h
src/: approval_gate.cpp  audit_log.cpp  config_loader.cpp  dependency_validator.cpp  diff_scanner.cpp  github_metadata.cpp  main.cpp  ownership_validator.cpp  path_validator.cpp  trace_logger.cpp
utils/: env_loader.cpp  env_loader.h  logger.h
(+31 files in other folders)
